# keyrate

./: .gitignore  CMakeLists.txt  README.md  main.cpp
.github/workflows/: cmake-multi-platform.yml
include/: config.hpp  dialog.hpp  keyrate.hpp  persistence.hpp  tray_icon.hpp  window.hpp
resource/: resource.rc
src/: config.cpp  dialog.cpp  keyrate.cpp  persistence.cpp  tray_icon.cpp  window.cpp
